Add nginx ssl default config + autosigned certificates

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@
 #####################
 # Nginx listen port on host machine:
 NGINX_PORT=80
+NGINX_SSL_PORT=443
 
 # PhpMyAdmin listen port on host machine:
 PMA_PORT=8080
@@ -19,7 +20,7 @@ MAILCATCHER_PORT=1080
 MYSQL_PORT=3306
 
 # Docker containers restart policies:
-# see https://docs.docker.com/engine/reference/run/#/restart-policies-restart
+# See https://docs.docker.com/engine/reference/run/#/restart-policies-restart
 RESTART_POLICIES=no
 
 # User used to run cmd inside Symfony container
