--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "gedmo/doctrine-extensions": "^2.4"
+        "gedmo/doctrine-extensions": "^2.4",
+        "doctrine/annotations": "^1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
