Update docker provisioning

--- a/.docker/prod/Dockerfile
+++ b/.docker/prod/Dockerfile
@@ -10,8 +10,6 @@ RUN apt-get update \
         git \
         sudo \
         wget \
-        htop \
-        ncdu \
         nano \
     && docker-php-ext-install \
         zip \
@@ -24,35 +22,24 @@ RUN apt-get update \
     && chmod +x /usr/local/bin/composer
 
 
+# Install OpCache
+RUN docker-php-ext-install opcache
+
+
+# Install APCu
+RUN pecl install apcu \
+    && echo "extension=apcu.so\napc.enable_cli = 1" > /usr/local/etc/php/conf.d/ext-apcu.ini
+
+
 # Add user DOCKER_USER defined in .env & give sudo privilege
 RUN adduser --disabled-password --gecos '' ${DOCKER_USER}
 RUN adduser ${DOCKER_USER} sudo
 RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 
-# Override default bash config
+# Override default bash config
 ADD .bashrc /home/${DOCKER_USER}/.bashrc
-
-
-# Install PhpMetrics
-RUN wget -O /phpmetrics.phar http://github.com/phpmetrics/PhpMetrics/raw/master/build/phpmetrics.phar
-RUN chmod +x /phpmetrics.phar
-RUN mv /phpmetrics.phar /usr/local/bin/phpmetrics
-
-
-# Install PhpDocumentor
-RUN wget -O /phpDocumentor.phar https://github.com/phpDocumentor/phpDocumentor2/releases/download/v2.9.0/phpDocumentor.phar
-RUN chmod +x /phpDocumentor.phar
-RUN mv /phpDocumentor.phar /usr/local/bin/phpDocumentor
-
-
-# Add opcache
-RUN docker-php-ext-install opcache
-
-
-# Add APCu
-RUN pecl install apcu \
-	&& echo "extension=apcu.so\napc.enable_cli = 1" > /usr/local/etc/php/conf.d/ext-apcu.ini
+RUN chown ${DOCKER_USER}:${DOCKER_USER} /home/${DOCKER_USER}/.bashrc
 
 
 # Install NodeJs
@@ -71,8 +58,3 @@ RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources
 RUN apt-get update \
     && apt-get install -y \
     yarn
-
-
-# Add Provisionning Scripts
-ADD entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
