--- a/.docker/prod/php.ini
+++ b/.docker/prod/php.ini
@@ -1,5 +1,7 @@
 date.timezone = Europe/Paris
 
+apc.shm_size = "50M"
+
 opcache.enable=1
 opcache.memory_consumption=512
 opcache.interned_strings_buffer=64
