--- a/.env.example
+++ b/.env.example
@@ -4,22 +4,31 @@
 
 
 #####################
+#    Environment    #
+#####################
+# Current env, it can be [dev or prod]
+ENV=dev
+
+
+#####################
 #    Application    #
 #####################
 # Nginx listen port on host machine:
 NGINX_PORT=80
+NGINX_HTTPS_PORT=443
 
 # PhpMyAdmin listen port on host machine:
 PMA_PORT=8080
 
-# MailCatcher listen port on host machine:
-MAILCATCHER_PORT=1080
+# Mailhog listen port on host machine:
+MAILHOG_PORT=1080
 
 # MySql listen port on host machine:
 MYSQL_PORT=3306
 
 # Docker containers restart policies:
-# See https://docs.docker.com/engine/reference/run/#/restart-policies-restart
+# See https://docs.docker.com/engine/reference/run/#restart-policies-restart
+# [no, always, on-failure]
 RESTART_POLICIES=no
 
 # User used to run cmd inside Symfony container
@@ -33,3 +42,12 @@ MYSQL_ROOT_PASSWORD=devops_root
 MYSQL_USER=devops
 MYSQL_PASSWORD=devops
 MYSQL_DATABASE=symfony
+
+
+#####################
+#       GIT         #
+#####################
+# To commit inside container & trigger phpGrump pre-commit hook
+# You can look your ~/.gitconfig
+GIT_USER_NAME="my-github-user-name"
+GIT_USER_EMAIL="my-github-email@mail.domain"
