--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 
 ## NOTES:
 # if you see ${SOME_VAR} in this file,
@@ -15,23 +15,26 @@ services:
         restart: "${RESTART_POLICIES}"
         ports:
             - "${NGINX_PORT}:80"
+            - "${NGINX_HTTPS_PORT}:443"
         links:
             - "symfony:symfony"
         volumes:
             - ".:/home/docker"
-            - "./app/Resources/docker/default.conf:/etc/nginx/conf.d/default.conf:ro"
+            - "./.docker/prod/prod.conf:/etc/nginx/conf.d/default.conf:ro"
+            - "./.data/web:/cert:ro"
 
     symfony:
         build:
-            context: ./app/Resources/docker/
+            context: ./.docker/prod/
             args:
                 - "DOCKER_USER=${DOCKER_USER}"
+        image: symfony3_docker:prod
         restart: "${RESTART_POLICIES}"
         links:
             - "db:db"
         volumes:
             - ".:/home/docker"
-            - "./app/Resources/docker/php.ini:/usr/local/etc/php/conf.d/custom.ini:ro"
+            - "./.docker/prod/php.ini:/usr/local/etc/php/conf.d/custom.ini:ro"
         working_dir: "/home/docker"
         user: "${DOCKER_USER}"
 
