--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 
 ## NOTES:
 # if you see ${SOME_VAR} in this file,
@@ -19,24 +19,27 @@ services:
             - "symfony:symfony"
         volumes:
             - ".:/home/docker"
-            - "./app/Resources/docker/dev.conf:/etc/nginx/conf.d/default.conf:ro"
+            - "./.docker/dev/dev.conf:/etc/nginx/conf.d/default.conf:ro"
 
     symfony:
         build:
-            context: ./app/Resources/docker/
+            context: ./.docker/dev/
             args:
                 - "DOCKER_USER=${DOCKER_USER}"
+                - "GIT_USER_NAME=${GIT_USER_NAME}"
+                - "GIT_USER_EMAIL=${GIT_USER_EMAIL}"
+        image: symfony3_docker:dev
         restart: "${RESTART_POLICIES}"
         links:
             - "db:db"
         volumes:
             - ".:/home/docker"
-            - "./app/Resources/docker/php.ini:/usr/local/etc/php/conf.d/custom.ini:ro"
+            - "./.docker/dev/php.ini:/usr/local/etc/php/conf.d/custom.ini:ro"
         working_dir: "/home/docker"
         user: "${DOCKER_USER}"
 
     db:
-        image: mysql:5.7
+        image: mysql
         restart: "${RESTART_POLICIES}"
         environment:
             - "MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}"
@@ -53,18 +56,18 @@ services:
         restart: "${RESTART_POLICIES}"
         environment:
             - "PMA_HOST=db"
-            - "PMA_USER=${MYSQL_USER}"
-            - "PMA_PASSWORD=${MYSQL_PASSWORD}"
+            - "PMA_USER=root"
+            - "PMA_PASSWORD=${MYSQL_ROOT_PASSWORD}"
         ports:
             - "${PMA_PORT}:80"
         depends_on:
             - "db"
 
-    mailcatcher:
-        image: yappabe/mailcatcher
+    mailhog:
+        image: mailhog/mailhog
         restart: "${RESTART_POLICIES}"
         ports:
-            - "${MAILCATCHER_PORT}:1080"
+            - "${MAILHOG_PORT}:8025"
             - "1025:1025"
         links:
             - "symfony:symfony"
