--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,11 @@ RESTART_POLICIES=no
 # User used to run cmd inside Symfony container
 DOCKER_USER=devops
 
+# Need to be the same UUID than local user (use "id -u $USER" to get current user uuid)
+DOCKER_USER_ID=1001
+
+# Your host local IP for Xdebug usage
+REMOTE_HOST=192.168.1.74
 
 #####################
 #       MySql       #
